Fix transform mask offsets after running a transform tool on that

When args.originalCenter() changes (due to transform mask initialization
or a change in the parent layer) we should update all the channel to take
these changes into account. Our transformation in the transform mask is
actually **relative** even though we store absolute offsets in the mask.

BUG:478966